--- a/gravitee-apim-console-webui/src/components/contextual/contextual-doc.component.html
+++ b/gravitee-apim-console-webui/src/components/contextual/contextual-doc.component.html
@@ -16,7 +16,7 @@
 
 -->
 <div class="contextual-doc-container" ng-class="{ open: $ctrl.isOpen }" ng-if="$ctrl.$state.current.name !== 'user'">
-  <div style="position: fixed">
+  <div class="contextual-doc-container__fixed">
     <div class="contextual-doc-header">
       <div class="contextual-doc-header-title">
         <h3>Documentation</h3>
