--- a/gravitee-apim-console-webui/src/components/gio-side-nav/gio-side-nav.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-side-nav/gio-side-nav.component.html
@@ -16,7 +16,7 @@
 
 -->
 <div class="gio-side-nav">
-  <gio-menu>
+  <gio-menu class="gio-side-nav__menu">
     <gio-menu-header>
       <gio-menu-selector
         tabIndex="1"
