fix(console): fix table of content scroll event watch

--- a/gravitee-apim-console-webui/src/organization/configuration/console/org-settings-general.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/console/org-settings-general.component.html
@@ -541,6 +541,6 @@
   <gio-table-of-contents
     class="settings-general__toc"
     [sectionNames]="{ '': 'Settings' }"
-    scrollingContainer="ng-console-settings"
+    scrollingContainer="md-content"
   ></gio-table-of-contents>
 </div>
