--- a/gravitee-apim-console-webui/src/organization/configuration/notification-templates/org-settings-notification-template.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/notification-templates/org-settings-notification-template.component.html
@@ -86,6 +86,6 @@
   <gio-table-of-contents
     class="org-settings-notification-template__toc"
     [sectionNames]="{ '': 'Templates' }"
-    scrollingContainer="ng-notification-template-component"
+    scrollingContainer="md-content"
   ></gio-table-of-contents>
 </div>
