--- a/gravitee-apim-console-webui/src/organization/configuration/user/detail/org-settings-user-detail.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/user/detail/org-settings-user-detail.component.html
@@ -450,8 +450,4 @@
   </gio-save-bar>
 </div>
 
-<gio-table-of-contents
-  class="toc"
-  [sectionNames]="{ '': 'User details' }"
-  scrollingContainer="ng-org-settings-user-detail"
-></gio-table-of-contents>
+<gio-table-of-contents class="toc" [sectionNames]="{ '': 'User details' }" scrollingContainer="md-content"></gio-table-of-contents>
