--- a/gravitee-apim-console-webui/src/organization/configuration/identity-provider/org-settings-identity-provider.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/identity-provider/org-settings-identity-provider.component.html
@@ -251,8 +251,5 @@
     </gio-save-bar>
   </form>
 
-  <gio-table-of-contents
-    [sectionNames]="{ '': 'Identity provider' }"
-    scrollingContainer="ng-org-settings-identity-provider"
-  ></gio-table-of-contents>
+  <gio-table-of-contents [sectionNames]="{ '': 'Identity provider' }" scrollingContainer="md-content"></gio-table-of-contents>
 </div>
