--- a/gravitee-apim-console-webui/src/organization/configuration/notification-templates/org-settings-notification-templates.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/notification-templates/org-settings-notification-templates.component.html
@@ -41,6 +41,6 @@
   <gio-table-of-contents
     class="org-settings-notification-templates__toc"
     [sectionNames]="{ '': 'Templates' }"
-    scrollingContainer="ng-notification-templates-component"
+    scrollingContainer="md-content"
   ></gio-table-of-contents>
 </div>
