--- a/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
@@ -43,14 +43,14 @@
   <!-- Display Drag icon Column -->
   <ng-container matColumnDef="drag-icon">
     <th mat-header-cell *matHeaderCellDef id="drag-icon"></th>
-    <td mat-cell *matCellDef="let element" class="plans__table__drag-icon">
+    <td mat-cell *matCellDef="let element" [class.plans__table__drag-icon]="!isReadOnly">
       <mat-icon>drag_indicator</mat-icon>
     </td>
   </ng-container>
   <!-- Display Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef id="name">Name</th>
-    <td mat-cell *matCellDef="let element" class="plans__table__name">
+    <td mat-cell *matCellDef="let element" class="plans__table__name" (click)="navigateToPlan(element.id)">
       {{ element.name }}
     </td>
   </ng-container>
@@ -84,11 +84,69 @@
   <!-- Actions Column -->
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef id="actions"></th>
-    <td mat-cell *matCellDef="let element"></td>
+    <td mat-cell *matCellDef="let element">
+      <div class="plans__table__actions">
+        <ng-container *ngIf="!isReadOnly; else readOnlyPlanActions">
+          <ng-container *ngIf="element.status !== 'CLOSED'">
+            <button
+              *gioPermission="{ anyOf: ['api-plan-u'] }"
+              mat-icon-button
+              aria-label="Edit the plan"
+              matTooltip="Edit the plan"
+              (click)="navigateToPlan(element.id)"
+            >
+              <mat-icon svgIcon="gio:edit-pencil"></mat-icon>
+            </button>
+          </ng-container>
+          <ng-container *ngIf="isV2Api && element.status !== 'CLOSED'">
+            <button
+              *gioPermission="{ anyOf: ['api-plan-u'] }"
+              mat-icon-button
+              aria-label="Design the plan"
+              matTooltip="Design the plan"
+              (click)="designPlan(element.id)"
+            >
+              <mat-icon svgIcon="gio:shield-check"></mat-icon>
+            </button>
+          </ng-container>
+          <ng-container *ngIf="element.status === 'STAGING'">
+            <button *gioPermission="{ anyOf: ['api-plan-u'] }" mat-icon-button aria-label="Publish the plan" matTooltip="Publish the plan">
+              <mat-icon svgIcon="gio:upload-cloud"></mat-icon>
+            </button>
+          </ng-container>
+          <ng-container *ngIf="element.status === 'PUBLISHED'">
+            <button
+              *gioPermission="{ anyOf: ['api-plan-u'] }"
+              mat-icon-button
+              aria-label="Deprecate the plan"
+              matTooltip="Deprecate the plan"
+            >
+              <mat-icon svgIcon="gio:cloud-unpublished"></mat-icon>
+            </button>
+          </ng-container>
+          <ng-container *ngIf="element.status !== 'CLOSED'">
+            <button *gioPermission="{ anyOf: ['api-plan-u'] }" mat-icon-button aria-label="`Close` the plan" matTooltip="Close the plan">
+              <mat-icon svgIcon="gio:cancel"></mat-icon>
+            </button>
+          </ng-container>
+        </ng-container>
+        <ng-template #readOnlyPlanActions>
+          <button
+            *gioPermission="{ anyOf: ['api-plan-r'] }"
+            mat-icon-button
+            aria-label="View the plan details"
+            matTooltip="View the plan details"
+            (click)="navigateToPlan(element.id)"
+          >
+            <mat-icon svgIcon="gio:eye-empty"></mat-icon>
+          </button>
+        </ng-template>
+      </div>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row cdkDrag [cdkDragData]="row" *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr mat-row cdkDrag [cdkDragData]="row" [cdkDragDisabled]=" isReadOnly || row.status !== 'PUBLISHED'" *matRowDef="let row; columns: displayedColumns"></tr>
 
   <!-- Row shown when there is no data -->
   <tr class="mat-row" *matNoDataRow>
