--- a/gravitee-apim-console-webui/src/management/api/proxy/components/health-check-form/api-proxy-health-check-form.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/components/health-check-form/api-proxy-health-check-form.component.scss
@@ -18,6 +18,10 @@ $typography: map.get(gio.$mat-theme, typography);
     }
   }
 
+  &--forms {
+    padding-top: 16px;
+  }
+
   &__request {
     padding-left: 8px;
 
