--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/configuration/api-proxy-group-endpoint-configuration.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/configuration/api-proxy-group-endpoint-configuration.component.scss
@@ -8,6 +8,7 @@ $typography: map.get(gio.$mat-theme, typography);
   &__endpoint-configuration {
     &__inherit {
       width: 100%;
+      padding-bottom: 0;
     }
   }
 }
