refactor(console): use new drag indicator icon

--- a/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
@@ -44,7 +44,7 @@
   <ng-container matColumnDef="drag-icon">
     <th mat-header-cell *matHeaderCellDef id="drag-icon"></th>
     <td mat-cell *matCellDef="let element" [class.plans__table__drag-icon]="!isReadOnly">
-      <mat-icon>drag_indicator</mat-icon>
+      <mat-icon class="plans__table__drag-icon" svgIcon="gio:drag-indicator"></mat-icon>
     </td>
   </ng-container>
   <!-- Display Name Column -->
