feat(console): deprecate plan

--- a/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
@@ -126,6 +126,7 @@
               mat-icon-button
               aria-label="Deprecate the plan"
               matTooltip="Deprecate the plan"
+              (click)="deprecatePlan(element)"
             >
               <mat-icon svgIcon="gio:cloud-unpublished"></mat-icon>
             </button>
