feat(console): add new plan

--- a/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.scss
@@ -10,6 +10,12 @@ $foreground: map.get(gio.$mat-theme, foreground);
 }
 
 .plans {
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   &__filters {
     margin-bottom: 8px;
   }
