--- a/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
@@ -15,8 +15,20 @@
     limitations under the License.
 
 -->
-<div class="title">
+<div class="plans__header">
   <h1>Plans</h1>
+  <div *ngIf="!isReadOnly && plansTableDS">
+    <button
+      *gioPermission="{ anyOf: ['api-plan-u'] }"
+      mat-raised-button
+      type="button"
+      color="primary"
+      aria-label="Add new plan"
+      (click)="navigateToNewPlan()"
+    >
+      <mat-icon svgIcon="gio:plus"></mat-icon>Add new plan
+    </button>
+  </div>
 </div>
 
 <mat-button-toggle-group class="plans__filters" aria-label="Plan status filters" [value]="status">
@@ -159,7 +171,13 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row cdkDrag [cdkDragData]="row" [cdkDragDisabled]=" isReadOnly || row.status !== 'PUBLISHED'" *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr
+    mat-row
+    cdkDrag
+    [cdkDragData]="row"
+    [cdkDragDisabled]="isReadOnly || row.status !== 'PUBLISHED'"
+    *matRowDef="let row; columns: displayedColumns"
+  ></tr>
 
   <!-- Row shown when there is no data -->
   <tr class="mat-row" *matNoDataRow>
