--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
@@ -60,7 +60,7 @@
 
   <gio-save-bar
     class="save-bar"
-    *ngIf="!isReadOnly && endpointForm?.dirty"
+    [creationMode]="mode === 'new'"
     [form]="endpointForm"
     [formInitialValues]="initialEndpointFormValue"
     (submitted)="onSubmit()"
