--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.html
@@ -15,7 +15,90 @@
     limitations under the License.
 
 -->
-🦊
-<div>
+<ng-container [formGroup]="generalForm">
+  <mat-form-field class="name-field" appearance="fill">
+    <mat-label>Name</mat-label>
+    <input matInput formControlName="name" required />
+    <mat-error *ngIf="generalForm.get('name').hasError('required')">Name is required.</mat-error>
+    <mat-error *ngIf="generalForm.get('name').hasError('maxlength')">The name has to be less than 50 characters long.</mat-error>
+    <mat-hint align="end">{{ generalForm.get('name').value?.length || 0 }}/50</mat-hint>
+  </mat-form-field>
+
+  <mat-form-field class="description-field" appearance="fill">
+    <mat-label>Description</mat-label>
+    <textarea matInput formControlName="description"></textarea>
+  </mat-form-field>
+
+  <mat-form-field class="characteristics-field" appearance="fill">
+    <mat-label>Characteristics</mat-label>
+    <gio-form-tags-input formControlName="characteristics" [addOnBlur]="false"></gio-form-tags-input>
+  </mat-form-field>
+
+  <h2>Conditions</h2>
+
+  // TODO: This plan is published, if you change the general conditions please remember to notify you API subscribers
+
+  <mat-form-field class="generalConditions-field" appearance="fill">
+    <mat-label>Page of General Conditions</mat-label>
+    <mat-select formControlName="generalConditions" multiple>
+      <mat-option *ngIf="conditionPages.length === 0" disabled>No page available</mat-option>
+      <mat-option *ngFor="let page of conditionPages" [value]="page.id">{{ page.name }}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <h2>Subscriptions</h2>
+
+  // TODO: disabled="plan.security == 'KEY_LESS'"
+
+  <gio-form-slide-toggle appearance="fill" class="validation-field">
+    Auto validate subscription
+    <mat-slide-toggle
+      gioFormSlideToggle
+      formControlName="validation"
+      aria-label="Auto validate subscription toggle"
+      name="validation"
+    ></mat-slide-toggle>
+  </gio-form-slide-toggle>
+
+  <gio-form-slide-toggle appearance="fill" class="commentRequired-field">
+    Consumer must provide a comment when subscribing to the plan
+    <mat-slide-toggle
+      gioFormSlideToggle
+      formControlName="commentRequired"
+      aria-label="Comment when subscribing to the plan toggle"
+      name="commentRequired"
+    ></mat-slide-toggle>
+  </gio-form-slide-toggle>
+
+  <mat-form-field class="commentMessage-field" appearance="fill">
+    <mat-label>Custom message to display to consumer</mat-label>
+    <input matInput formControlName="commentMessage" />
+    <mat-error *ngIf="generalForm.get('commentMessage').hasError('maxlength')"
+      >The comment message has to be less than 64 characters long.</mat-error
+    >
+  </mat-form-field>
+
+  <h2>Deployment</h2>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Sharding tags</mat-label>
+    <mat-select formControlName="shardingTags" aria-label="Sharding tags selection" multiple>
+      <mat-option *ngFor="let tag of shardingTags$ | async" [value]="tag.id"
+        >{{ tag.name }}{{ tag.description ? ' - ' + tag.description : '' }}</mat-option
+      >
+    </mat-select>
+  </mat-form-field>
+
+  <h2>Access-Control</h2>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Groups excluded</mat-label>
+    <mat-select formControlName="excludedGroups" aria-label="Groups excluded selection" multiple>
+      <mat-option *ngFor="let group of groups$ | async" [value]="group.id">{{ group.name }}</mat-option>
+    </mat-select>
+  </mat-form-field>
+</ng-container>
+
+<div class="actions">
   <button mat-button matStepperNext>Next</button>
 </div>
