--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.scss
@@ -1,3 +1,15 @@
 @use 'sass:map';
 @use 'node_modules/@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
+
+:host {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+}
+
+.actions {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: -20px;
+}
