--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<ng-container [formGroup]="generalForm">
+<ng-container *ngIf="generalForm" [formGroup]="generalForm">
   <mat-form-field class="name-field" appearance="fill">
     <mat-label>Name</mat-label>
     <input matInput formControlName="name" required />
@@ -40,9 +40,12 @@
 
   <mat-form-field class="generalConditions-field" appearance="fill">
     <mat-label>Page of General Conditions</mat-label>
-    <mat-select formControlName="generalConditions" multiple>
-      <mat-option *ngIf="conditionPages.length === 0" disabled>No page available</mat-option>
-      <mat-option *ngFor="let page of conditionPages" [value]="page.id">{{ page.name }}</mat-option>
+    <mat-select formControlName="generalConditions">
+      <ng-container *ngIf="conditionPages$ | async; let conditionPages">
+        <mat-option *ngIf="conditionPages?.length === 0" disabled>No page available</mat-option>
+        <mat-option *ngIf="conditionPages?.length !== 0"></mat-option>
+        <mat-option *ngFor="let page of conditionPages" [value]="page.id">{{ page.name }}</mat-option>
+      </ng-container>
     </mat-select>
   </mat-form-field>
 
