--- a/gravitee-apim-console-webui/src/scss/material-layout-compatibility.scss
+++ b/gravitee-apim-console-webui/src/scss/material-layout-compatibility.scss
@@ -97,6 +97,26 @@
   }
 }
 
+.gio-root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.gio-main-page {
+  flex: 1 1 auto;
+  min-height: 0;
+  display: flex;
+  flex-direction: row;
+
+  &__content {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+  }
+}
+
 .gv-main-container {
   height: 100%;
   display: flex;
