--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -118,6 +118,17 @@
       </td>
     </ng-container>
 
+    <!-- Display Version Column -->
+    <ng-container matColumnDef="definitionVersion">
+      <th mat-header-cell *matHeaderCellDef id="definitionVersion">Version</th>
+      <td mat-cell *matCellDef="let element">
+        <span [matTooltip]="element.definitionVersion.label" class="gio-badge-neutral"
+          ><mat-icon *ngIf="element.definitionVersion.icon" class="gio-left" [svgIcon]="element.definitionVersion.icon"></mat-icon
+          >{{ element.definitionVersion.label }}</span
+        >
+      </td>
+    </ng-container>
+
     <!-- Display Visibility Column -->
     <ng-container matColumnDef="visibility">
       <th mat-header-cell *matHeaderCellDef id="visibility">Visibility</th>
