fix(console): remove padding bottom on search input

--- a/gravitee-apim-console-webui/src/shared/components/gio-table-wrapper/gio-table-wrapper.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-table-wrapper/gio-table-wrapper.component.scss
@@ -38,6 +38,7 @@ $typography: map.get(gio.$mat-theme, typography);
     &__search-field {
       font-family: mat.font-family($typography, caption);
       font-size: mat.font-size($typography, caption);
+      padding-bottom: 0;
 
       @include gio-layout.large-desktop {
         width: 360px;
