--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/2-secure-step/plan-edit-secure-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/2-secure-step/plan-edit-secure-step.component.html
@@ -15,8 +15,43 @@
     limitations under the License.
 
 -->
-🦊
-<div>
+<ng-container *ngIf="secureForm" [formGroup]="secureForm">
+  <mat-form-field class="securityTypes-field" appearance="fill">
+    <mat-label>Authentication type</mat-label>
+    <mat-select formControlName="securityTypes" required>
+      <mat-option *ngFor="let type of securityTypes" [value]="type.id">{{ type.name }}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <ng-container *ngIf="securityConfigSchema">
+    <h2>Configuration</h2>
+
+    <gv-schema-form
+      class="securityConfigSchema-form"
+      ngDefaultControl
+      formControlName="securityConfig"
+      [schema]="securityConfigSchema"
+      [attr.readonly]="secureForm.get('securityConfig').enabled ? null : true"
+      (:gv-schema-form:fetch-resources)="onFetchResources($event)"
+    ></gv-schema-form>
+
+    <h2>Additional selection rule</h2>
+
+    <gio-banner-info>
+      Define an additional rule when you're managing multiple plans of the same type to improve the plan's selection process.
+      <span gioBannerBody>
+        For example, if you want to check the issuer of a jwt token: &#123; #context.attributes['jwt'].claims['iss'] == 'my-issuer' &#125;
+      </span>
+    </gio-banner-info>
+    <mat-form-field class="selectionRule-field" appearance="fill">
+      <mat-label>Selection Rule</mat-label>
+      <input matInput formControlName="selectionRule" />
+      <mat-hint> Support EL (e.g: &#123; #context.attributes['jwt'].claims['iss'] == 'my-issuer' &#125;)</mat-hint>
+    </mat-form-field>
+  </ng-container>
+</ng-container>
+
+<div class="actions">
   <button mat-button matStepperPrevious>Back</button>
   <button mat-button matStepperNext>Next</button>
 </div>
