--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/3-restriction-step/plan-edit-restriction-step.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/3-restriction-step/plan-edit-restriction-step.component.scss
@@ -1,3 +1,28 @@
 @use 'sass:map';
 @use 'node_modules/@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
+
+:host {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.rateLimit-card,
+.quota-card,
+.resourceFiltering-card {
+  display: flex;
+  flex-direction: column;
+
+  &__schema-form {
+    border-top: 1px solid mat.get-color-from-palette(gio.$mat-space-palette, lighter80);
+    padding: 0 8px;
+  }
+}
+
+.actions {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: -20px;
+}
