feat(console): impl onSubmit for new plan page

--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/1-general-step/plan-edit-general-step.component.html
@@ -36,7 +36,9 @@
 
   <h2>Conditions</h2>
 
-  // TODO: This plan is published, if you change the general conditions please remember to notify you API subscribers
+  <!-- // TODO: For edit mode   
+    This plan is published, if you change the general conditions please remember to notify you API subscribers 
+  -->
 
   <mat-form-field class="generalConditions-field" appearance="fill">
     <mat-label>Page of General Conditions</mat-label>
@@ -51,7 +53,7 @@
 
   <h2>Subscriptions</h2>
 
-  // TODO: disabled="plan.security == 'KEY_LESS'"
+  <!-- // TODO: for edit mode disabled="plan.security == 'KEY_LESS'" -->
 
   <gio-form-slide-toggle appearance="fill" class="validation-field">
     Auto validate subscription
@@ -103,5 +105,5 @@
 </ng-container>
 
 <div class="actions">
-  <button mat-button matStepperNext>Next</button>
+  <button mat-button matStepperNext type="button">Next</button>
 </div>
