--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/2-secure-step/plan-edit-secure-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/2-secure-step/plan-edit-secure-step.component.html
@@ -52,6 +52,6 @@
 </ng-container>
 
 <div class="actions">
-  <button mat-button matStepperPrevious>Back</button>
-  <button mat-button matStepperNext>Next</button>
+  <button mat-button matStepperPrevious type="button">Back</button>
+  <button mat-button matStepperNext type="button">Next</button>
 </div>
