--- a/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/3-restriction-step/plan-edit-restriction-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/plan/edit/3-restriction-step/plan-edit-restriction-step.component.html
@@ -84,5 +84,5 @@
 </ng-container>
 
 <div class="actions">
-  <button mat-button matStepperPrevious>Back</button>
+  <button mat-button matStepperPrevious type="button">Back</button>
 </div>
